--- a/labs/lab03/report/cite.bib
+++ b/labs/lab03/report/cite.bib
@@ -1,7 +1,17 @@
 @manual{mymanual,
-  title        = {GNU Octave},
+  title        = {GNU Octave documentation},
   year         = 2024,
-  month        = {April},
-  note         = {Available at \url{https://ru.wikipedia.org/wiki/GNU_Octave}},
-  organization = {Wikipedia}
+  month        = {October},
+  note         = {Available at \url{https://docs.octave.org/latest/}},
+  organization = {The Octave Project Developers},
+  url = {https://docs.octave.org/latest/}
+}
+
+@manual{mymanual2,
+  title        = {Julia documentation},
+  year         = 2024,
+  month        = {October},
+  note         = {Available at \url{https://docs.julialang.org/en/v1/}},
+  organization = {Julia Programming Language.},
+  url = {https://docs.julialang.org/en/v1/}
 }
